--- a/app/views/levels/grid.html.erb
+++ b/app/views/levels/grid.html.erb
@@ -1,3 +1,31 @@
 <p>
   You can use <a href="https://getbootstrap.com/docs/5.3/components/alerts/" target="_blank">Alerts</a> for the colored boxes within each cell.
 </p>
+<div class="container">
+<div class="row">
+  <div class="alert alert-success">Full-width</div>
+</div>
+<div class="row">
+  <div class="alert alert-success">8</div>
+  <div class="alert alert-warning">4</div>
+</div>
+<div class="row">
+<div class="alert alert-danger">3</div>
+<div class="alert alert-secondary">9</div>
+</div>
+<div class="row">
+<div class="alert alert-primary">5</div>
+<div class="alert alert-primary">5</div>
+</div>
+<div class="row">
+<div class="alert alert-success">Centered 8</div>
+<div class="alert alert-warning">Centered 10</div>
+</div>
+<div class="row">
+<div class="alert alert-info">2</div>
+<div class="alert alert-info">2</div>
+<div class="alert alert-info">2</div>
+<div class="alert alert-info">2</div>
+<div class="alert alert-info">2</div>
+</div>
+</div>
