--- a/app/views/levels/utility_classes.html.erb
+++ b/app/views/levels/utility_classes.html.erb
@@ -1,6 +1,21 @@
 
 <!-- Add utility classes and/or elements as needed to achieve the target appearance. -->
-
 <div>
+<a href="/">Table of Contents</a>
+</div>
+<hr>
+
+<div class="header">
+  <a class="bg-primary text-white text-decoration-none p-3">First</a>
+  <a class="bg-secondary text-white text-decoration-none p-3">Second</a>
+  <a class="bg-danger text-white text-decoration-none p-3">Third</a>
+</div>
+<hr>
+<div class="inbox">
+<a>Inbox</a>
+<a class="badge rounded-pill text-bg-danger text-decoration-none d-flex justify-content-center">42</a>
+</div>
+<hr>
+<div class="border-start border-primary shadow-sm">
   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel ad debitis iste minima molestiae repellat magni? Voluptas, odit voluptate quasi esse ea iure quibusdam error at architecto veritatis, beatae nihil?
 </div>
