--- a/app/views/levels/dynamic_list_group.html.erb
+++ b/app/views/levels/dynamic_list_group.html.erb
@@ -1,2 +1,16 @@
 <%# The below code creates an array of 10 random names %>
 <%= names = Array.new(10) { Faker::Name.unique.name  } %>
+<div class="container">
+<div class="row">
+<div class="col-md-4 offset-md-4">
+<div class="list-group">
+  <% names.each do |name| %>
+  <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between- align-items-center">
+  <%= name %>
+  </a>
+  <% end %>
+  
+</div>
+</div>
+</div>
+</div>
