--- a/app/views/levels/primary_button.html.erb
+++ b/app/views/levels/primary_button.html.erb
@@ -1,7 +1,2 @@
-<span>Click me!</span>
+<span class="btn">Click me!</span>
 
-<style>
-
-  /* Write your CSS here to make the span look like a button. */
-
-</style>
